--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "vlucas/phpdotenv": "~2.2",
         "league/flysystem": "^1.0",
         "graham-campbell/flysystem": "^4.0",
-        "league/fractal": "^0.17.0"
+        "league/fractal": "^0.17.0",
+        "symfony/dom-crawler": "^3.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
