--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "league/flysystem": "^1.0",
         "graham-campbell/flysystem": "^4.0",
         "league/fractal": "^0.17.0",
-        "symfony/dom-crawler": "^3.3"
+        "symfony/dom-crawler": "^3.3",
+        "league/html-to-markdown": "^4.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
