--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "league/fractal": "^0.17.0",
         "symfony/dom-crawler": "^3.3",
         "league/html-to-markdown": "^4.6",
-        "league/csv": "^9.1"
+        "league/csv": "^9.1",
+        "wa72/htmlpagedom": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
