--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,13 @@
 {
-    "name": "laravel/lumen",
-    "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
+    "name": "laravel/laravel",
+    "description": "The Laravel Framework.",
+    "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/lumen-framework": "5.4.*",
-        "vlucas/phpdotenv": "~2.2",
         "league/flysystem": "^1.0",
         "graham-campbell/flysystem": "^4.0",
-        "league/fractal": "^0.17.0",
         "symfony/dom-crawler": "^3.3",
         "league/html-to-markdown": "^4.6",
         "league/csv": "^9.1",
