--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "laravel/framework": "^5.5",
+        "league/csv": "^9.1",
         "league/flysystem": "^1.0",
         "graham-campbell/flysystem": "^4.0",
-        "symfony/dom-crawler": "^3.3",
         "league/html-to-markdown": "^4.6",
-        "league/csv": "^9.1",
+        "symfony/dom-crawler": "^3.3",
         "wa72/htmlpagedom": "^1.3"
     },
     "require-dev": {
