--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,16 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/art-institute-of-chicago/data-hub-foundation.git"
+        }
+    ],
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "^5.5",
+        "aic/data-hub-foundation": "dev-master#21e4fcb344c95063a3c0d6682a20253ad1cc3da5",
         "league/csv": "^9.1",
         "league/flysystem": "^1.0",
         "graham-campbell/flysystem": "^4.0",
