--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
+APP_NAME=Laravel
 APP_ENV=local
-APP_DEBUG=true
 APP_KEY=
+APP_DEBUG=true
+APP_LOG_LEVEL=debug
+APP_URL=http://localhost
+
 APP_TIMEZONE=UTC
 
 DB_CONNECTION=mysql
