Fix default API_URL to use .test domain

--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,4 @@ DB_PASSWORD=secret
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
 
-API_URL=http://data-aggregator.dev/api/v1/search
+API_URL=http://data-aggregator.test/api/v1/search
