--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "league/csv": "^9.1",
         "league/html-to-markdown": "^4.6",
         "symfony/dom-crawler": "^3.3",
-        "wa72/htmlpagedom": "^1.3"
+        "wa72/htmlpagedom": "^1.3",
+        "doctrine/dbal": "^2.9"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
