--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
+    "name": "aic/data-service-catalogues",
+    "description": "A data service for the AIC data hub.",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
@@ -11,8 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "^5.5",
+        "php": "^7.1.3",
+        "laravel/framework": "5.8.*",
         "aic/data-hub-foundation": "dev-master#dd91c35745b6b61607b0f558dbba984bc0af96ca",
         "league/csv": "^9.1",
         "league/html-to-markdown": "^4.6",
