--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "league/html-to-markdown": "^4.6",
         "symfony/dom-crawler": "^3.3",
         "wa72/htmlpagedom": "^1.3",
-        "doctrine/dbal": "^2.9"
+        "doctrine/dbal": "^2.9",
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
