--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": "^7.1.3",
         "laravel/framework": "5.8.*",
-        "aic/data-hub-foundation": "dev-master#dd91c35745b6b61607b0f558dbba984bc0af96ca",
+        "aic/data-hub-foundation": "dev-master",
         "league/csv": "^9.1",
         "league/html-to-markdown": "^4.6",
         "symfony/dom-crawler": "^3.3",
