--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,6 @@ DB_PASSWORD='secret'
 CACHE_DRIVER='file'
 QUEUE_DRIVER='sync'
 
+SENTRY_LARAVEL_DSN='https://88888888888888888888888888888888@sentry.io/8888888'
+
 API_URL='http://data-aggregator.test/api/v1/search'
