--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,15 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "laravel/framework": "5.8.*",
         "aic/data-hub-foundation": "dev-master",
+        "doctrine/dbal": "^2.9",
+        "laravel/framework": "5.8.*",
+        "laravel/tinker": "^1.0",
         "league/csv": "^9.1",
         "league/html-to-markdown": "^4.6",
+        "sentry/sentry-laravel": "^1.6",
         "symfony/dom-crawler": "^3.3",
-        "wa72/htmlpagedom": "^1.3",
-        "doctrine/dbal": "^2.9",
-        "laravel/tinker": "^1.0"
+        "wa72/htmlpagedom": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
