--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,6 @@ CACHE_DRIVER='file'
 QUEUE_DRIVER='sync'
 
 SENTRY_LARAVEL_DSN='https://88888888888888888888888888888888@sentry.io/8888888'
+SENTRY_HTTP_PROXY=
 
 API_URL='http://data-aggregator.test/api/v1/search'
